[Feature #166001240] Add auth middleware to client and admin endpoints
