# server/controllers/authController.js
@@ -26,8 +26,8 @@ const auth = {
     }
     const uniqueUser = mock.users.find(user => user.email === email);
     if (uniqueUser) {
-      return res.status(404).json({
-        status: 404,
+      return res.status(409).json({
+        status: res.statusCode,
         error: `User with this email:${JSON.stringify(email)} is already registered`,
       });
     }
@@ -49,7 +49,6 @@ const auth = {
         fistName: firstName,
         lastName: user.lastName,
         email: user.email,
-        password: user.password,
         address: user.address,
         status: user.status,
         isAdmin: user.isAdmin,
